login translate + chrome flicker fixed

--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -90,4 +90,5 @@
 
 .transparent{
   opacity: 80%;
+  will-change: contents;
 }
